--- a/help/nemp_medienbib.html
+++ b/help/nemp_medienbib.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-  <title>Nemp: Noch ein mp3-Player</title>
+  <title>Nemp: Die Medienbibliothek</title>
 
 
   <style title="" media="" type="text/css">
@@ -32,7 +32,7 @@ font-size: 12px;
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
       <td>
-      <h2 class="head">Nemp: Noch ein mp3-Player</h2>
+      <h2 class="head">Nemp: Die Medienbibliothek</h2>
 
       </td>
 
@@ -43,40 +43,124 @@ font-size: 12px;
 
 <hr style="width: 100%; height: 2px;"><br>
 
-Ein mp3-Player f&uuml;r Windows<br>
+Nemp kann auf Ihrem Computer nach Audiodateien suchen, diese in einer
+Liste verwalten und nach verschiedenen Kriterien sortiert anzeigen.
+&Uuml;ber eine Schnellsuche finden Sie in Nullkommanichts den
+gew&uuml;nschten Titel und k&ouml;nnen ihn der Playlist
+hinzuf&uuml;gen.<br>
 
-Aktuelle Version: 4.0.0<br>
+<br>
+<br>
+
+<span style="font-weight: bold;">Computer nach
+Audiodateien untersuchen</span><br>
+
+W&auml;hlen Sie im Men&uuml; "Medienbibliothek -&gt;
+Computer nach Audiodateien untersuchen" und w&auml;hlen Sie den
+Ordner mit Ihren Musikdateien aus. Nemp scannt dann dieses Verzeichnis
+inklusive aller Unterordner und sortiert gefundene Audiodateien in die
+Medienbibliothek ein.<br>
+
+Dieser Vorgang kann eine ganze Zeit lang dauern - Nemp schafft
+ungef&auml;hr 20-40 Dateien pro Sekunde. Sie k&ouml;nnen Nemp
+aber w&auml;hrenddessen weiter benutzen - auch wenn einiges dann
+nicht ganz so fl&uuml;ssig l&auml;uft.<br>
+
+<br>
+<br>
+
+<span style="font-weight: bold;">Browsen in der
+Medienbibliothek</span><br>
+
+Es gibt drei grundlegende M&ouml;glichkeiten, in der
+Medienbibliothek zu st&ouml;bern. Sie k&ouml;nnen zwischen den
+drei Browsemodi mit den Buttons im oberen Bereich umschalten.<br>
 
 <br>
 
-&copy; 2005-2010 Daniel 'Gausi' Gau&szlig;mann<br>
+<div style="text-align: center;"><img style="width: 72px; height: 24px;" alt="browsebuttons" src="TabBtnBrowse.png"><br>
 
-mail@gausi.de<br>
+</div>
 
 <br>
 
-<h3>Neu in Version 4.0 (Auszug)</h3>
+Die <span style="font-weight: bold;">"klassische Ansicht"</span> war zuerst da. Hier wird die Medienbibliothek
+nach zwei Kriterien gefiltert angezeigt - z.B. Interpret und Album. In
+der linken H&auml;lfte werden dann alle Interpreten aufgelistet.
+Wenn Sie einen Interpreten markieren, werden erstens in der Liste
+daneben alle Alben und Sampler angezeigt, auf denen dieser Interpret
+vertreten ist, und in der gro&szlig;en Liste unten alle Titel
+dieses Interpreten.<br>
 
+&Uuml;ber das Kontextmen&uuml; "Browsen nach -&gt; ..."
+k&ouml;nnen Sie ausw&auml;hlen, nach welchen Kriterien sie in
+dieser Ansicht st&ouml;bern wollen.<br>
+
+<span style="font-style: italic;"><br>
+
+</span>Der <span style="font-weight: bold;">"Coverflow"</span> sortiert die Lieder nach Covern. Hierzu
+scannt Nemp beim Suchen nach Audiodateien nicht nur
+die&nbsp;Musikdateien, sondern sucht zu jedem Lied auch ein
+passendes Cover auf der Platte. <br>
+
+Hierzu nimmt Nemp an, dass die Ordnerstruktur in etwa der Albenstruktur
+entspricht, d.h. Sie haben auf Ihrer Platte pro Album einen Ordner.<br>
+
+Wenn kein Cover gefunden wird, kann Nemp im Internet nach einem
+passenden Cover suchen.<br>
+
+<br>
+
+In der <span style="font-weight: bold;">"Tagwolke"</span> werden alle Eigenschaften wie Interpret, Album, Genre,
+Jahr, Jahrzehnt in einen gro&szlig;en Topf geworfen, und die
+h&auml;ufigsten Eigenschaften werden angezeigt - immer soviel, wie
+gerade in dem Fenster Platz ist. Wenn Sie auf einen Tag klicken,
+bekommen Sie alle Titel mit diesem Tag angezeigt. Wenn Sie einen Tag
+doppelt anklicken, wird eine neue Tagwolke gebildet, die nur Titel mit
+diesem Tag ber&uuml;cksichtigt.<br>
+
+<br>
+<br>
+<span style="font-weight: bold;">Die Schnellsuche</span><br>
+Wenn Sie einen bestimmten Titel h&ouml;ren wollen, dann k&ouml;nnen Sie
+daf&uuml;r die Schnellsuche benutzen. Fangen Sie einfach an zu tippen,
+und Nemp zeigt Ihnen w&auml;hrend des Tippens alle Titel an, die dazu
+passen. <br>
+<span style="font-style: italic;">Tip: In der Voreinstellung werden
+"w&auml;hrend des Tippens" nur exakte Treffer aufgelistet. Wenn Sie die
+Entertaste bet&auml;tigen, f&uuml;hrt Nemp einen ungenauen Durchlauf
+durch, der auch Rechtschreibfehler ber&uuml;cksichtigt. Dann werden
+auch Titel von "P!nk" &nbsp;gefunden, wenn Sie nach "Pink" gesucht
+haben. Und wenn Sie sich nicht sicher sind, wieviele r, s und t in
+"Alanis Morissette" vorkommen, ist das auch nicht schlimm.</span><br style="font-style: italic;">
+<br>
+<br>
+<span style="font-weight: bold;">
+Von der Medienliste in die Playlist</span><br>
+
+Sie k&ouml;nnen dann einen einzelnen Titel, oder ein ganzes Album (oder was sonst grade in der Browseliste angezeigt wird)
+in die Playlist einf&uuml;gen - entweder &uuml;ber das
+Kontextmen&uuml; oder per Drag&amp;Drop.<br>
+Wenn Sie in der unteren Liste einen Titel doppelt anklicken, dann
+passiert das, was Sie in den Optionen als Standard-Aktion eingestellt
+haben.<br>
 <ul style="list-style-type: circle;">
-
-  <li>Sch&ouml;nerer Coverflow mit automatischem
-Cover-Download</li>
-
-  <li>Browsemodus "Tagwolke"</li>
-
-  <li>Einfachere Bearbeitung der mp3-Dateien</li>
-
-  <li>Unterst&uuml;tzung f&uuml;r Windows 7</li>
-
-  <li>Partymodus mit vergr&ouml;&szlig;erter Ansicht und
-reduzierten Funktionen</li>
-
-  <li>Vormerk-Liste f&uuml;r die Playlist</li>
-
-  <li>...</li>
-
+  <li>In die Playlist einf&uuml;gen (Voreinstellung). Der Titel wird ans Ende der Playlist angeh&auml;ngt</li>
+  <li>Abspielen (und alte Playlist l&ouml;schen). Die aktuelle Playlist wird geleert und eine neue begonnen.</li>
+  <li>Einf&uuml;gen hinter den aktuellen Titel.&nbsp;Nach dem aktuellen
+Titel einf&uuml;gen. Der neue Titel wird dann in die Vormerkliste
+eingef&uuml;gt, damit er auch wirklich als n&auml;chstes abgespielt
+wird.</li>
+  <li>Einfach abspielen. Die Wiedergabe der Playlist wird unterbrochen
+und das Lied wird "einfach so" abgespielt. Wenn Sie im Player auf
+"n&auml;chstes Lied" klicken, setzt die Wiedergabe der Playlist an der
+unterbrochenen Stelle wieder ein.</li>
 </ul>
 
+<span style="font-style: italic;">Tip: Drag&amp;Drop
+funktioniert auch aus dem Player heraus, um z.B. ein Lied auf einen
+mobilen mp3-Player zu kopieren.
+</span><br>
 <br>
 
 </body>
