--- a/help/medienbib_pflege.html
+++ b/help/medienbib_pflege.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+  
+
+
+  
   <title>Pflege der Medienbibliothek</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -23,65 +28,100 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Pflege der Medienbibliothek</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 F&uuml;r eine korrekte Sortierung und ein schnelles Finden der Dateien
 ist es wichtig, dass die einzelnen Audiodateien mit ordentlichen
 ID3-Tags versehen sind.<br>
+
 <br>
+
 <span style="font-style: italic;">Hinweis: Aktuell kann Nemp nur
 ID3-Tags in mp3-Dateien ver&auml;ndern. Andere Formate werden nicht
 unterst&uuml;tzt (oder nur lesend).</span><br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Informationen bearbeiten</span><br>
+
 Sie k&ouml;nnen die Information direkt im Hauptfenster &auml;ndern.<br>
+
 <ul style="list-style-type: circle;">
+
   <li>In der Tabellen-Ansicht die entsprechende Zelle markieren, und
 zweimal langsam klicken (kein Doppelklick), oder die Taste F2
 bet&auml;tigen. Einige Informationen k&ouml;nnen dabei nicht
 ge&auml;ndert werden - die sind einfach fest wie z.B. die Bitrate.<br>
+
 Abbruch geht &uuml;ber die ESC-Taste, best&auml;tigen mit der Enter-Taste.<br>
+
 Bei den Bewertungen reicht ein Klick f&uuml;r das Setzen der neuen Bewertung.</li>
+
   <li>In der &Uuml;bersicht neben der Tabellenansicht (dort, wo Sie auch die <a href="nemp_tagcloud.html">erweiterten Tags</a> &auml;ndern k&ouml;nnen). Einfach auf den Interpreten, Titel, Album klicken und die Information aktualisieren.<br>
+
   </li>
+
 </ul>
+
 Sie k&ouml;nnen dar&uuml;ber auch die Informationen von Dateien in der
 Playlist bearbeiten. Wenn sich der Titel in der Playlist auch in der
 Medienbibliothek befindet, wird die Information auch in der
 Medienbibliothek aktualisiert.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Detailliertere Bearbeitung</span><br>
+
 Wenn Sie mehr wollen, k&ouml;nnen Sie das &uuml;ber das
 Kontextmen&uuml; "Eigenschaften" &nbsp;machen. Dann &ouml;ffnet sich
 ein weiteres Fenster, in dem Sie die ID3Tags bearbeiten k&ouml;nnen und
 z.B. auch Cover und Liedtexte einf&uuml;gen k&ouml;nnen.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Liedtexte</span><br>
+
 Nemp kann zu einem Lied auch den Liedtext speichern, so dass man
 &uuml;ber die Suche auch ein Lied finden kann, das irgendwie so "in the
 town, where i was born" geht. Dieser Liedtext kann entweder von Hand
 eingegeben werden, oder automatisch aus dem Internet besorgt werden.
 Hierzu wird die Seite http://lyrics.wikia.com/ benutzt. <br>
+
 Das funktioniert f&uuml;r Sie genauso wie die Suche nach erweiterten
 Tags bei LastFM, auch wenn hier keine API benutzt wird (war mal so,
 wurde aber auf Druck der Plattenindustrie abgeschaltet, weil durch den
@@ -90,19 +130,30 @@ Umsatz verloren gehen und die Weltwirtschaft zugrunde geht), sodass der
 Liedtext etwas m&uuml;hselig aus der Seite herausgepopelt werden muss.
 Aber das erledigt Nemp f&uuml;r Sie - zumindest solange das
 Seitendesign nicht allzusehr ge&auml;ndert wird.<br>
-Markieren Sie einfach ein paar Dateien und w&auml;hlen&nbsp;&uuml;ber das Kontextmen&uuml; "lyrics holen".<br>
+
+Markieren Sie einfach ein paar Dateien und w&auml;hlen&nbsp;&uuml;ber das Kontextmen&uuml; "Lyrics holen".<br>
+
 <br>
+
 <span style="font-weight: bold;"><br>
+
 Aktualisieren der Daten</span><br>
+
 Wenn Sie einzelne Dateien mit anderen Programmen ge&auml;ndert haben,
 dann k&ouml;nnen Sie ein neues Einlesen f&uuml;r diesse Dateien
 erreichen.<br>
+
 W&auml;hlen Sie dazu &uuml;ber das Kontextmen&uuml; "Markierte aktualisieren".<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">L&ouml;schen von Dateien</span> <br>
+
 Zum L&ouml;schen von Dateien aus der Medienbibliothek w&auml;hlen Sie
 "Markierte Dateien aus der Bibliothek entfernen". Damit werden die
 Dateien aus der Bibliothek gel&ouml;scht, aber nicht von der Festplatte.<br>
+
 </body>
 </html>
