--- a/help/player_anzeige.html
+++ b/help/player_anzeige.html
@@ -51,6 +51,7 @@ Der Mittelteil des Nemp-Fensters bildet der eigentliche Player.<br>
 <br>
 
 <div style="text-align: center;"><img style="width: 232px; height: 134px;" alt="player" src="player.png"><br>
+
 </div>
 
 <br>
@@ -82,6 +83,57 @@ k&ouml;nnen die Bewertung hier mit einem Klick &auml;ndern.
 Diese Bewertung wird auch in der Medienbibliothek aktualisiert, und in
 den ID3-Tag der mp3-Datei geschrieben.<br>
 
+<br>
+
+<span style="font-weight: bold;">Herunterfahren,
+Geburtstagsmodus, Webserver, Scrobbeln</span><br>
+
+Je nachdem welche Zusatzfunktionen gerade aktiv sind, werden unter den
+Sternchen weitere Symbole eingeblendet.<br>
+
+<table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
+  <tbody>
+
+    <tr>
+
+      <td style="width: 30px;"><img style="width: 16px; height: 16px;" src="shutdown.png" alt="disabled"></td>
+
+      <td>Der Countdown zum <a href="herunterfahren.html">Herunterfahren</a>
+wurde aktiviert. Was genau wann passiert, erfahren Sie &uuml;ber den
+Hinweis, der erscheint, wenn Sie eine zeitlang den Mauszeiger auf
+diesem Symbol lassen.</td>
+
+    </tr>
+
+    <tr>
+
+      <td style="width: 30px;"><img style="width: 16px; height: 16px;" src="geburtstag.png" alt="disabled"></td>
+
+      <td>Der <a href="geburtstagsmodus.html">Geburtstagsmodus</a> wurde aktiviert. Nemp wird zu gegebener zeit die Wiedergabe der Playlist f&uuml;r ein Geburtstagsst&auml;ndchen unterbrechen</td>
+
+    </tr>
+
+    <tr>
+
+      <td><img style="width: 16px; height: 16px;" src="webserver.png" alt=""></td>
+
+      <td>Der <a href="webserver.html">Webserver</a> ist aktiviert um den Zugriff auf den Player &uuml;ber einen Webbrowser zu erm&ouml;glichen.</td>
+
+    </tr>
+
+    <tr>
+
+      <td><img style="width: 16px; height: 16px;" src="scrobbler.png" alt=""></td>
+
+      <td><a href="scrobbeln.html">Scrobbeln</a> ist aktiviert. Die Lieder, die Sie gerade h&ouml;ren, werden in Ihr Benutzerprofil auf last.fm &uuml;bertragen.<br>
+
+      </td>
+
+    </tr>
+
+  </tbody>
+</table>
 <br>
 
 <br>
@@ -199,10 +251,13 @@ die Aufnahme zu beenden.<br>
 
   </tbody>
 </table>
+
 Die Aufnahme wird in dem Verzeichnis gespeichert, das in den
 Einstellungen daf&uuml;r angegeben wurde. Sie k&ouml;nnen das
-Verzeichnis &uuml;ber das Men&uuml; "Tools -&gt; Verzeichnisse -&gt;
+Verzeichnis &uuml;ber das Men&uuml; "Tools -&gt;
+Verzeichnisse -&gt;
 Aufnahmen" anzeigen lassen.<br>
+
 <br>
 
 <br>
