--- a/help/optionen_g_geburtstag.html
+++ b/help/optionen_g_geburtstag.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-  <title>Allgemeine Einstellungen</title>
+  <title>Geburtstagsmodus</title>
 
 
   <style title="" media="" type="text/css">
@@ -35,7 +35,7 @@ font-size: 12px;
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
       <td>
-      <h2 class="head">Allgemeine Einstellungen</h2>
+      <h2 class="head">Geburtstagsmodus</h2>
 
       </td>
 
@@ -46,6 +46,15 @@ font-size: 12px;
 
 <hr style="width: 100%; height: 2px;"><br>
 
+Konfigurieren Sie den <a href="geburtstagsmodus.html">Geburtstagsmodus</a> von Nemp. <br>
+<br>
+Sie k&ouml;nnen f&uuml;r das Geburtstagslied und das Countdownlied per
+Klick das gerade markierte Lied im Hauptfenster &uuml;bernehmen. Es
+spielt dabei keine Rolle, ob Sie ein Lied in der Playlist oder der
+Medienbibliothek markiert haben.<br>
+<br>
+<span style="font-style: italic;">Hinweis: Wenn Sie ein Lied f&uuml;r einen Countdown verwenden, dann wird dieser Countdown </span>vor<span style="font-style: italic;"> dem Event gestartet, so dass das eigentliche Lied f&uuml;r das Event zur angegebenen Zeit startet.</span><br>
+<br>
 <br>
 
 </body>
