--- a/help/optionen_h_scrobbeln.html
+++ b/help/optionen_h_scrobbeln.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-  <title>Allgemeine Einstellungen</title>
+  <title>LastFM (Scrobbeln)</title>
 
 
   <style title="" media="" type="text/css">
@@ -35,7 +35,8 @@ font-size: 12px;
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
       <td>
-      <h2 class="head">Allgemeine Einstellungen</h2>
+      <h2 class="head">LastFM (Scrobbeln)<br>
+      </h2>
 
       </td>
 
@@ -46,7 +47,9 @@ font-size: 12px;
 
 <hr style="width: 100%; height: 2px;"><br>
 
+Konfigurieren Sie den eingebauten Scrobbler, um Ihr Benutzerprofil auf last.fm immer aktuell zu halten.<br>
 <br>
+Mehr dazu <a href="scrobbeln.html">hier</a>.<br>
 
 </body>
 </html>
