--- a/help/optionen_i_webserver.html
+++ b/help/optionen_i_webserver.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-  <title>Allgemeine Einstellungen</title>
+  <title>Webserver</title>
 
 
   <style title="" media="" type="text/css">
@@ -35,7 +35,7 @@ font-size: 12px;
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
       <td>
-      <h2 class="head">Allgemeine Einstellungen</h2>
+      <h2 class="head">Webserver</h2>
 
       </td>
 
@@ -46,7 +46,11 @@ font-size: 12px;
 
 <hr style="width: 100%; height: 2px;"><br>
 
+Konfigurieren Sie den Nemp Webserver, um ihren Freunden im lokalen Netz
+oder auch vom anderen Ende der Welt Zugriff auf ihre Medienbibliothek
+zu geben.<br>
 <br>
+Mehr dazu <a href="webserver.html">hier</a>.<br>
 
 </body>
 </html>
