--- a/help/player_anzeige.html
+++ b/help/player_anzeige.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+  
+
+
+  
   <title>Anzeigen im Player</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,241 +31,349 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Anzeigen im Player</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 Der Mittelteil des Nemp-Fensters bildet der eigentliche Player.<br>
 
+
 <br>
+
 
 <div style="text-align: center;"><img style="width: 232px; height: 134px;" alt="player" src="player.png"><br>
 
+
 </div>
+
 
 <br>
 
+
 <span style="font-weight: bold;">Titelanzeige</span><br>
+
 
 Die Titelanzeige k&ouml;nnen Sie durch einen Klick in die Zeile
 umschalten zwischen<br>
 
+
 <ul style="list-style-type: circle;">
+
 
   <li>Anzeige von Interpret - Titel, so wie es auch die Playliste
 macht</li>
 
+
   <li>Anzeige des Dateinamens inklusive des komplette Pfades</li>
+
 
   <li>Einigen Infos zur Datei wie Bitrate, Samplerate und Dauer</li>
 
+
   <li>Liedtext (falls vorhanden)</li>
+
 
 </ul>
 
+
 <span style="font-weight: bold;"><br>
 
+
 Sternchen-Bewertung</span><br>
+
 
 Zeigt die&nbsp;Bewertung des aktuellen Titels an. Sie
 k&ouml;nnen die Bewertung hier mit einem Klick &auml;ndern.
 Diese Bewertung wird auch in der Medienbibliothek aktualisiert, und in
 den ID3-Tag der mp3-Datei geschrieben.<br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">Herunterfahren,
 Geburtstagsmodus, Webserver, Scrobbeln</span><br>
 
+
 Je nachdem welche Zusatzfunktionen gerade aktiv sind, werden unter den
 Sternchen weitere Symbole eingeblendet.<br>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
 
+
       <td style="width: 30px;"><img style="width: 16px; height: 16px;" src="shutdown.png" alt="disabled"></td>
+
 
       <td>Der Countdown zum <a href="herunterfahren.html">Herunterfahren</a>
 wurde aktiviert. Was genau wann passiert, erfahren Sie &uuml;ber den
 Hinweis, der erscheint, wenn Sie eine zeitlang den Mauszeiger auf
 diesem Symbol lassen.</td>
 
+
     </tr>
 
+
     <tr>
+
 
       <td style="width: 30px;"><img style="width: 16px; height: 16px;" src="geburtstag.png" alt="disabled"></td>
 
+
       <td>Der <a href="geburtstagsmodus.html">Geburtstagsmodus</a> wurde aktiviert. Nemp wird zu gegebener zeit die Wiedergabe der Playlist f&uuml;r ein Geburtstagsst&auml;ndchen unterbrechen</td>
+
 
     </tr>
 
+
     <tr>
+
 
       <td><img style="width: 16px; height: 16px;" src="webserver.png" alt=""></td>
 
+
       <td>Der <a href="webserver.html">Webserver</a> ist aktiviert um den Zugriff auf den Player &uuml;ber einen Webbrowser zu erm&ouml;glichen.</td>
 
+
     </tr>
+
 
     <tr>
 
+
       <td><img style="width: 16px; height: 16px;" src="scrobbler.png" alt=""></td>
+
 
       <td><a href="scrobbeln.html">Scrobbeln</a> ist aktiviert. Die Lieder, die Sie gerade h&ouml;ren, werden in Ihr Benutzerprofil auf last.fm &uuml;bertragen.<br>
 
+
       </td>
+
 
     </tr>
 
+
+  
   </tbody>
 </table>
-<br>
 
 <br>
+
+
+<br>
+
 
 <span style="font-weight: bold;">Zeitanzeige</span><br>
 
+
 Ist per Klick umschaltbar zwischen Zeit- und Restzeit-Anzeige.<br>
 
-<br>
 
 <br>
+
+
+<br>
+
 
 <span style="font-weight: bold;">Visualisierung</span><br>
+
 
 Eine kleine Spielerei, die fast jeder Player hat. Einen tieferen Sinn
 hat das nicht.<br>
 
-<br>
 
 <br>
+
+
+<br>
+
 
 <span style="font-weight: bold;">Lautst&auml;rke</span><br>
+
 
 &Uuml;ber den senkrechten Schieberegeler k&ouml;nnen Sie die
 Lautst&auml;rke einstellen<br>
 
-<br>
 
 <br>
+
+
+<br>
+
 
 <span style="font-weight: bold;">Fortschrittsanzeige</span><br>
+
 
 Was soll man dazu schon sagen? Anzeige und &Auml;nderung des
 Fortschritts im aktuellen Titel.<br>
 
-<br>
 
 <br>
+
+
+<br>
+
 
 Steuerung des Players<br>
 
+
 Da die meisten Buttons selbsterkl&auml;rend sind, nur diese beiden:<br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">Abspielreihenfolge</span><br>
 
+
 <br>
+
 
 <img src="BtnRandom.png" alt=""><br>
 
+
 <br>
+
 
 Die einzelnen Symbole bedeuten dabei<br>
 
+
 <ul style="list-style-type: circle;">
+
 
   <li>Alles wiederholen: Nemp l&auml;uft die Playlist von
 oben nach unten durch und startet dann von vorne</li>
 
+
   <li>Titel wiederholen: Der aktuelle Titel wird in einer
 Schleife wiederholt.</li>
+
 
   <li>Zufallsmodus: Die Dateien werden in zuf&auml;lliger
 Reihenfolge
 abgespielt. In den Optionen k&ouml;nnen Sie einstellen, wann ein
 bereits abgespielter Titel erneut abgespielt werden darf.</li>
 
+
   <li>Kein wiederholen: Nemp spielt die Playlist ab und
 h&auml;lt dann die Wiedergabe an.</li>
 
+
 </ul>
+
 
 <span style="font-weight: bold;">Aufnahme</span><br>
 
+
 <br>
+
 
 Der Aufnahme-Button ist nur bei Webradio-Sendern im mp3-Format aktiv<br>
 
+
 <br>
+
 
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
 
+
   <tbody>
+
 
     <tr>
 
+
       <td style="width: 30px;"><img style="width: 18px; height: 18px;" src="BtnRecord.png" alt="disabled"></td>
+
 
       <td>Aufnahme nicht m&ouml;glich, da gerade eine Datei
 abgespielt wird, oder das Format des Senders von Nemp nicht
 f&uuml;r die Aufnahme unterst&uuml;tzt wird.</td>
 
+
     </tr>
+
 
     <tr>
 
+
       <td><img style="width: 18px; height: 18px;" src="BtnRecord_1.png" alt=""></td>
+
 
       <td>Aufnahme m&ouml;glich. Klicken Sie den Button um
 die Aufnahme zu starten.</td>
 
+
     </tr>
+
 
     <tr>
 
+
       <td><img style="width: 18px; height: 18px;" src="BtnRecord_2.png" alt=""></td>
+
 
       <td>Aufnahme l&auml;uft. Klicken Sie auf den Button, um
 die Aufnahme zu beenden.<br>
 
+
       </td>
+
 
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 Die Aufnahme wird in dem Verzeichnis gespeichert, das in den
-Einstellungen daf&uuml;r angegeben wurde. Sie k&ouml;nnen das
+<a href="optionen_e_webradio.html">Einstellungen</a> daf&uuml;r angegeben wurde. Sie k&ouml;nnen das
 Verzeichnis &uuml;ber das Men&uuml; "Tools -&gt;
 Verzeichnisse -&gt;
 Aufnahmen" anzeigen lassen.<br>
 
-<br>
 
 <br>
+
+
+<br>
+
 
 </body>
 </html>
