--- a/help/optionen_4_Taskleiste.html
+++ b/help/optionen_4_Taskleiste.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Taskleiste</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,42 +31,67 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Taskleiste und Tray</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
+
 <span style="font-weight: bold;">Taskleiste und/oder Tray</span><br>
+
 Steuert das Verhalten von Nemp in der Taskleiste. Wenn Sie Windows 7
 benutzen, sollten Sie den Eintrag in der Taskleiste niemals alsblenden
 lassen. Denn dann verschwinden die Buttons aus dem Vorschaufenster, mit
 dem Sie Nemp auch im minimierten Zustand steuern k&ouml;nnen.<br>
+
 <br>
+
 <div style="text-align: center;"><img style="width: 236px; height: 199px;" alt="taskleiste" src="taskleiste.png"><br>
+
 </div>
+
 <br>
+
 <span style="font-weight: bold;"><br>
+
 Benachrichtigung eines Deskband</span><br>
+
 Nemp kann auf Windows&nbsp;2000/XP ein Deskband installieren, dass sich
 in die Taskleiste einbettet. Vista und Windows 7 werden dabei nicht
 unterst&uuml;tzt. &Uuml;ber dieses Deskband k&ouml;nnen Sie Nemp
 steuern, auch wenn Nemp minimiert ist.<br>
-Unter Windows 7 k&ouml;nnen Sie das &uuml;ber das Vorschaufenster.<br>
+<br>
+<div style="text-align: center;"><img style="width: 265px; height: 114px;" alt="deskband" src="deskband.png"><br>
+</div>
+<br>
+<br>
+
 
 </body>
 </html>
