--- a/help/Tipps.html
+++ b/help/Tipps.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Tipps und Tricks</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,75 +31,137 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Tipps und Tricks</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 Es gibt einige Funktionen in Nemp, die etwas versteckt sind.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Dateien kopieren und Sampler zusammenstellen</span><br>
+
 Nemp kann auch Dateien kopieren. Ziehen sie von der Medienliste ein
 einzelnes Lied, mehrere Lieder oder ein ganzes Album in den
 Windows-Explorer. Nemp kopiert dann die Dateien in das neue Verzeichnis.<br>
+
 Von der Playlist aus funktioniert das auch per Copy&amp;Paste, also Strg+C in Nemp, r&uuml;ber zum Explorer, Strg+V.<br>
+
 <br>
+
+<span style="font-weight: bold;">Lautst&auml;rke per Mausrad</span><br>
+Wenn Sie einmal im Player-Bereich klicken, k&ouml;nnen Sie die Lautst&auml;rke mit dem Mausrad &auml;ndern.<br>
 <br>
+
 <span style="font-weight: bold;">Kontextmen&uuml;s</span><br>
+
 Nemp hat an verschiedenen Stellen unterschiedliche Kontextmen&uuml;s - einfach ab und zu mal die rechte Maustaste ausprobieren.<br>
+
 <br>
+
 Folgende Elemente haben ein eigenes Kontextmen&uuml;:<br>
+
 <ul style="list-style-type: circle;">
+
   <li>Der Player-Teil</li>
+
   <li>Der Playlisten-Bereich</li>
+
   <li>Der Medienlisten-Bereich</li>
+
   <li>Der Bereich beim Cover mit Detailanzeige</li>
+
   <li>Die Spalten&uuml;berschriften der Medienliste unten</li>
+
   <li>Der Play-Button</li>
+
   <li>Der Stop-Button</li>
+
   <li>Der Button zur Steuerung der Zufallswiedergabe</li>
+
 </ul>
+
 <br>
+
 <span style="font-weight: bold;">Ein paar Hotkeys</span><br>
+
 <br>
+
 <table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2">
+
   <tbody>
+
     <tr>
+
       <td style="width: 80px;">F7 oder F8</td>
+
       <td>Wechseln zwischen kompakter und Einzelfenster-Ansicht</td>
+
     </tr>
+
     <tr>
+
       <td>Strg+R</td>
+
       <td>Wechsel der Anordnung der Details neben dem Cover</td>
+
     </tr>
+
     <tr>
+
       <td>Strg+1..5</td>
+
       <td>einem oder mehreren Liedern eine Bewertung zuordnen</td>
+
     </tr>
+
     <tr>
+
       <td>Escape</td>
+
       <td>Bricht den laufenden Vorgang ab</td>
+
     </tr>
+
+  
   </tbody>
 </table>
+
 <br>
+
 <br>
+
 <br>
+
 
 </body>
 </html>
