--- a/help/Fragen.html
+++ b/help/Fragen.html
@@ -46,53 +46,138 @@ font-size: 12px;
 
 <hr style="width: 100%; height: 2px;"><br>
 
-<span style="font-weight: bold;">Was will Nemp st&auml;ndig im Internet?<br>
-</span>Wenn Nemp ins Internet geht, dann haben Sie das vorher erlaubt. Von alleine macht Nemp da nichts.<span style="font-weight: bold;"><span style="font-weight: bold;"></span></span><span style="font-weight: bold;"><span style="font-weight: bold;"></span></span>
+<span style="font-weight: bold;">Was will Nemp
+st&auml;ndig im Internet?<br>
+
+</span>Wenn Nemp ins Internet geht, dann haben Sie das vorher
+erlaubt. Von alleine macht Nemp da nichts.<span style="font-weight: bold;"><span style="font-weight: bold;"></span></span><span style="font-weight: bold;"><span style="font-weight: bold;"></span></span>
 <ul style="list-style-type: circle;">
 
 </ul>
+
 <ul style="list-style-type: circle;">
-  <li>Nach Updates suchen. Abschalten unter "Einstellungen -&gt; Allgemeine Einstellungen"<br>
+
+  <li>Nach Updates suchen. Abschalten unter "Einstellungen
+-&gt; Allgemeine Einstellungen"<br>
+
   </li>
 
   <li>Scrobbeln. Abschalten per Klick auf das last.fm-Logo <img style="width: 16px; height: 16px;" alt="scrobbel" src="scrobbler.png">, das dann im Hauptfenster erscheint.</li>
-  <li>Cover nachladen f&uuml;r den Player und das Coverflow. Abschalten &uuml;ber "Einstellungen -&gt; Player und Cover".</li>
+
+  <li>Cover nachladen f&uuml;r den Player und das Coverflow.
+Abschalten &uuml;ber "Einstellungen -&gt; Player und Cover".</li>
+
   <li>Webradio abspielen. Klar, oder?</li>
-  <li>Daten &uuml;ber den Webserver senden. Abschalten &uuml;ber das Webserver-Symbol <img style="width: 16px; height: 16px;" alt="web" src="webserver.png">, das dann im Hauptfenster erscheint.</li>
-  <li>Nach Lyrics suchen. Abschalten durch nichtverwenden der Funktion</li>
-  <li>Nach erweiterten Tags suchen. Abschalten durch nichtverwenden der Funktion</li>
-  <li>Eigene IP-Adresse bestimmen. Abschalten durch "nicht auf den Knopf dr&uuml;cken".</li>
+
+  <li>Daten &uuml;ber den Webserver senden. Abschalten
+&uuml;ber das Webserver-Symbol <img style="width: 16px; height: 16px;" alt="web" src="webserver.png">, das dann im Hauptfenster erscheint.</li>
+
+  <li>Nach Lyrics suchen. Abschalten durch nichtverwenden der
+Funktion</li>
+
+  <li>Nach erweiterten Tags suchen. Abschalten durch
+nichtverwenden der Funktion</li>
+
+  <li>Eigene IP-Adresse bestimmen. Abschalten durch "nicht auf
+den Knopf dr&uuml;cken".</li>
+
 </ul>
-<span style="font-weight: bold;">Gibt es eine portable Version von Nemp?</span><br>
+
+<span style="font-weight: bold;">Mein Virenscanner erkennt
+Nemp als Virus, Trojaner oder sonstigen Schweinkram!</span><br>
+
+Das ist mit ziemlicher Sicherheit ein Fehlalarm. Auch wenn Sie das
+sicherlich nicht &uuml;berzeugen wird: In Nemp steckt kein
+Trojanisches Pferd oder sonstige Malware. Nemp sendet auch keine Daten
+&uuml;ber Sie oder Ihren Computer an mich oder irgendwen sonst (von
+den eventuellen Bugreports mal abgesehen, aber die k&ouml;nnen Sie
+ja vor dem Senden durchsehen).<br>
+
+Die Ursache f&uuml;r den Alarm liegt in den von vielen
+Virenscannern verwendeten Heuristiken. Diese schlagen &ouml;fters
+auf mit Delphi erstellte&nbsp;Programme an, die die so genannten
+Indy-Komponenten verwenden. Diese erleichtern den Zugriff auf Daten im
+Internet - und Nemp nutzt das Internet f&uuml;r einige
+n&uuml;tzliche Dinge (s.o.).<br>
+
+<br>
+
+<span style="font-weight: bold;">Gibt es eine portable
+Version von Nemp?</span><br>
+
 Ja. Nemp ist von sich aus portabel. Beim Starten testet Nemp, in
 welchem Verzeichnis es sich befindet. Liegt es im
 "Programme"-Verzeichnis von Windows (meistens C:\Programme, C:\Program
-Files oder c:\Program Piles (x86)), dann verh&auml;lt es sich wie ein
+Files oder c:\Program Piles (x86)), dann verh&auml;lt es sich wie
+ein
 "installiertes Programm". In allen anderen F&auml;llen werden
-s&auml;mtliche Daten im Programmverzeichnis gespeichert - Nemp ist dann
+s&auml;mtliche Daten im Programmverzeichnis gespeichert - Nemp ist
+dann
 portabel.<span style="font-weight: bold;"><br>
+
 <br>
+
 Gibt es versteckte Eastereggs?</span><br>
-Ja. Allerdings ist das so speziell, dass es nur f&uuml;r Leute aus der
+
+Ja. Allerdings ist das so speziell, dass es nur f&uuml;r Leute aus
+der
 "Entwickler-Ecke" interessant ist. Nemp kann eine der Fragen zum
 "Adventsgewinnspiel 2008" dieser Community l&ouml;sen, bei der eine
 defekte mp3-Datei repariert werden musste.<br>
+
 <br>
-<span style="font-weight: bold;">Was macht diese KBHook.dll? Das sieht so nach Keylogger aus!</span><br>
+
+<span style="font-weight: bold;">Was macht diese
+KBHook.dll? Das sieht so nach Keylogger aus!</span><br>
+
 Diese dll hooked tats&auml;chlich bestimmte Tastendr&uuml;cke -
-n&auml;mlich die&nbsp;Multimediatasten, falls das so konfiguriert
+n&auml;mlich die&nbsp;Multimediatasten, falls das so
+konfiguriert
 wurde. Technisch sind die aber nicht gleichzusetzen mit den anderen
-Tasten - daf&uuml;r m&uuml;sste man etwas anders vorgehen. Deswegen
-meckert da auch kein Virenscanner - die Datei ist v&ouml;llig harmlos.<br>
+Tasten - daf&uuml;r m&uuml;sste man etwas anders vorgehen.
+Deswegen
+meckert da auch kein Virenscanner - die Datei ist v&ouml;llig
+harmlos.<br>
+
 <br>
-<span style="font-weight: bold;">Gibt es versteckte Backdoors? </span><br>
-Ja. Ich habe mir erlaubt, ein Master-Passwort f&uuml;r die Beendigung
+
+<span style="font-weight: bold;">Gibt es versteckte
+Backdoors? </span><br>
+
+Ja. Ich habe mir erlaubt, ein Master-Passwort f&uuml;r die
+Beendigung
 des Party-Modus fest einzuprogrammieren. Man findet es im
-Quellcode&nbsp;in der <span style="font-family: monospace;">NempMainUnit.pas</span> in der Methode <span style="font-family: monospace;">PM_P_PartyModeClick</span>.<span style="font-weight: bold;"><br>
+Quellcode&nbsp;in der <span style="font-family: monospace;">NempMainUnit.pas</span>
+in der Methode <span style="font-family: monospace;">PM_P_PartyModeClick</span>.<span style="font-weight: bold;"><br>
+
+</span><br>
+
+<span style="font-weight: bold;">Ich habe Nemp
+heruntergeladen, und habe jetzt eine Rechnung wegen Abokosten bekommen!?</span><br>
+
+Es gibt im Internet verschiedene Abofallen-Abzocker, die kostenlose
+Software anbieten, daf&uuml;r aber Geld verlangen. Vor solchen
+Diensten warnen regelm&auml;&szlig;ig die Verbraucherzentralen.
+Ich habe mit diesen Seiten nichts zu tun. Solche Vorgehensweisen sind
+zwar h&ouml;chst unerfreulich, rechtlich gibt es aber&nbsp;von
+meiner Seite aus keine M&ouml;glichkeit, dagegen vorzugehen. <br>
+
+Setzen Sie sich mit einer Verbraucherzentrale in Ihrer Umgebung in
+Verbindung und fragen Sie dort um Rat.<br>
+
 <br>
-Ich h&auml;tte gerne noch eine Funktion eingebaut ...</span><br>
-Fragen kostet nichts. Einfach eine E-Mail an mail@gausi.de schicken, ich schau dann mal, was sich da machen l&auml;sst.<br>
+
+<span style="font-weight: bold;">Ich h&auml;tte gerne
+noch eine Funktion eingebaut ...</span><br>
+
+Fragen kostet nichts. Einfach eine E-Mail an mail@gausi.de schicken.
+Ich schau dann mal, was sich da machen l&auml;sst.<br>
+
 <br>
+
 <br>
+
+<br>
+
 </body>
 </html>
