--- a/help/optionen_f_effekte.html
+++ b/help/optionen_f_effekte.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Effekte</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,45 +31,79 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Effekte</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
+
 <span style="font-weight: bold;">Bei &Auml;nderung der Geschwindigkeit</span><br>
+
 Nemp kann die Wiedergabe eines Liedes schneller oder langsamer ablaufen
 lassen. Technisch sehr einfach l&auml;sst es sich realisieren, wenn man
 dabei eine Ver&auml;nderung der Tonh&ouml;he in Kauf nimmt. Das
 h&ouml;rt sich lustig an, ist aber nicht immer gew&uuml;nscht.<br>
+
 Wenn man die CPU etwas mehr rechnen l&auml;sst, kann man diesen Effekt recht gut vermeiden.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Effekte/Equalizer</span><br>
+
 Geben Sie an, ob die Effekt- und Equalizer-Einstellungen gespeichert
 und beim n&auml;chsten Start von Nemp wieder hergestellt werden sollen.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Jingles</span><br>
+
 Geben Sie an, was passiert, wenn Sie einen Jingle abspielen. Damit man
 diesen ordentlich h&ouml;rt, ist es oft ratsam, die Lautst&auml;rke der
 Wiedergabe zu reduzieren.<br>
 <br>
 <br>
+<span style="font-weight: bold;">Kopfh&ouml;rer</span><br>
+Einf&uuml;gemodus f&uuml;r Kopfh&ouml;rer-Dateien steuert, was passiert, wenn Sie auf den "Einf&uuml;gen-Button" in der <a href="kopfhoerer.html">Kopfh&ouml;rer-Steuerung</a> klicken. Zur Auswahl stehen dieselben M&ouml;glichkeiten wie beim Einf&uuml;gen aus der <a href="optionen_b_Playlist.html">Medienliste</a>. <br>
+Au&szlig;erdem k&ouml;nnen Sie einstellen, ob die
+Kopfh&ouml;rer-Wiedergabe automatisch angehalten werden soll, wenn Sie
+die Kopfh&ouml;rer-Steuerung ausblenden, d.h. auf einen anderen Tab wie
+Cover, Lyrics, Equalizer oder Effekte wechseln.<br>
+Wenn Nemp im Einzelfenster-Modus ist, wird die
+Kopfh&ouml;rer-Wiedergabe immer angehalten, wenn Sie das
+Kopfh&ouml;rer-Fenster ausblenden.<br>
+
+<br>
+
 
 </body>
 </html>
