--- a/help/kopfhoerer.html
+++ b/help/kopfhoerer.html
@@ -2,15 +2,10 @@
 <html>
 <head>
 
-
-  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-
-  
-
-
-  
   <title>Abspielen im Kopfh&ouml;rer</title>
+
+
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -22,60 +17,106 @@ bottom: 0px;
 body { font-family: Verdana;
 font-size: 12px;
 }
+td { font-family: Verdana;
+font-size: 12px;}
   </style>
 </head>
 
 
 <body>
 
-
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
-
 
   <tbody>
 
-
     <tr>
-
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
-
       <td>
-      
       <h2 class="head">Abspielen im Kopfh&ouml;rer</h2>
-
 
       </td>
 
-
     </tr>
 
-
-  
   </tbody>
 </table>
 
-
 <hr style="width: 100%; height: 2px;"><br>
-Mit Nemp k&ouml;nnen Sie zwei Dateien parallel abspielen. Wenn Sie zwei
-Soundkatren in Ihrem Rechner eingebaut haben, k&ouml;nnen Sie an den
-Ausgang der zweiten Karten einen Kopfh&ouml;rer anschlie&szlig;en, und
-dar&uuml;ber ein anderes Lied h&ouml;ren als &uuml;ber die Boxen.<br>
-Gedacht ist das f&uuml;r den Einsatz auf einer Party, wenn man in ein
-anderes Lied reinh&ouml;ren m&ouml;chte, ohne die Hauptausgabe zu
+
+Mit Nemp k&ouml;nnen Sie zwei Dateien parallel abspielen. Wenn Sie
+zwei
+Soundkatren in Ihrem Rechner eingebaut haben, k&ouml;nnen Sie an
+den
+Ausgang der zweiten Karten einen Kopfh&ouml;rer
+anschlie&szlig;en, und
+dar&uuml;ber ein anderes Lied h&ouml;ren als &uuml;ber die
+Boxen.<br>
+
+Gedacht ist das f&uuml;r den Einsatz auf einer Party, wenn man in
+ein
+anderes Lied reinh&ouml;ren m&ouml;chte, ohne die Hauptausgabe
+zu
 st&ouml;ren.<br>
+
 <br>
+
 Wenn nur eine Soundkarte installiert ist, oder f&uuml;r die
 Hauptausgabe und die Kopfh&ouml;rerausgabe dieselbe Soundkarte
-ausgew&auml;hlt ist, werden beide Titel auf einem Ausgabeger&auml;t
+ausgew&auml;hlt ist, werden beide Titel auf einem
+Ausgabeger&auml;t
 abgespielt.<br>
-<br>
-Markieren Sie dazu einfach einen Titel in der Playlist oder der
-Medienbibliothek und w&auml;hlen &uuml;bder das Kontextmen&uuml; "Im
-Kopfh&ouml;rer abspielen". Es &ouml;ffnet sich dann ein kleines
-Zusatzfenster, &uuml;ber das Sie die zweite Wiedergabe rudiment&auml;r
-steuern k&ouml;nnen.<br>
 
+<br>
+
+<div style="text-align: center;"><img style="width: 234px; height: 188px;" alt="headphones" src="head.png"><br>
+
+</div>
+
+<br>
+
+Markieren Sie dazu einfach einen Titel in der Playlist oder der
+Medienbibliothek und w&auml;hlen &uuml;bder das
+Kontextmen&uuml; "Im
+Kopfh&ouml;rer abspielen". &nbsp;Alternativ k&ouml;nnen Sie
+auch in der Kopfh&ouml;rer-Steuerung den "laden"-Button verwenden.<br>
+
+<br>
+
+<table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
+  <tbody>
+
+    <tr>
+
+      <td style="width: 30px;"><img style="width: 24px; height: 24px;" src="BtnLoadHeadset.png" alt=""></td>
+
+      <td>L&auml;dt das aktuell markierte St&uuml;ck aus
+Playlist oder Medienbibliothek in den Kopfh&ouml;rer und spielt es
+ab.<br>
+
+      </td>
+
+    </tr>
+
+    <tr>
+
+      <td><img style="width: 24px; height: 24px;" src="BtnHeadsetToPlaylist.png" alt=""></td>
+
+      <td>F&uuml;gt das aktuelle St&uuml;ck im
+Kopfh&ouml;rer-Player in die Playlist ein. Wie genau das passiert,
+k&ouml;nnen Sie in den <a href="optionen_f_effekte.html">Einstellungen</a>
+angeben.<br>
+
+      </td>
+
+    </tr>
+ 
+  </tbody>
+</table>
+<br>
+
+Die &uuml;brigen Steuerelemente haben dieselben Bedeutungen wie im Hauptplayer.
 </body>
 </html>
