--- a/help/nemp_start.html
+++ b/help/nemp_start.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+  
+
+
+  
   <title>Nemp: Noch ein mp3-Player</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -23,61 +28,86 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Nemp: Noch ein mp3-Player</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 Ein mp3-Player f&uuml;r Windows<br>
 
-Aktuelle Version: 4.0.0<br>
 
+Aktuelle Version: 4.0.0<br>
 <br>
+
 
 &copy; 2005-2010 Daniel 'Gausi' Gau&szlig;mann<br>
-
-mail@gausi.de<br>
-
+www.gausi.de, mail@gausi.de<br>
 <br>
+<div style="text-align: left;"><img style="width: 155px; height: 112px;" alt="nemp" src="nemp.png"><br>
+</div>
+
 
 <h3>Neu in Version 4.0 (Auszug)</h3>
 
+
 <ul style="list-style-type: circle;">
+
 
   <li>Sch&ouml;nerer Coverflow mit automatischem
 Cover-Download</li>
 
+
   <li>Browsemodus "Tagwolke"</li>
+
 
   <li>Einfachere Bearbeitung der mp3-Dateien</li>
 
+
   <li>Unterst&uuml;tzung f&uuml;r Windows 7</li>
+
 
   <li>Partymodus mit vergr&ouml;&szlig;erter Ansicht und
 reduzierten Funktionen</li>
 
+
   <li>Vormerk-Liste f&uuml;r die Playlist</li>
+
 
   <li>...</li>
 
+
 </ul>
 
+
 <br>
+
 
 </body>
 </html>
