--- a/help/optionen_7_Ansicht.html
+++ b/help/optionen_7_Ansicht.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Ansicht</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,67 +31,95 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Ansicht</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 <span style="font-weight: bold;">Folgende Spalten in der
 Medienliste anzeigen</span><br>
 
+
 Auswahl der sichtbaren Spalten in der Medienbibliothek.<br>
 
+
 <br>
+
 
 <span style="font-style: italic;">Tipp: Sie
 k&ouml;nnen die Auswahl auch &uuml;ber einen Rechtsklick auf
 die Spalten&uuml;berschriften im Hauptfenster &auml;ndern.</span><br>
 
-<br>
 
 <br>
+
+
+<br>
+
 
 <span style="font-weight: bold;">Browsen in der
 Medienbibliothek</span><br>
 
+
 <ul style="list-style-type: circle;">
+
 
   <li>Eingabe von weiteren Kombinationen f&uuml;r die
 klassische Ansicht, die &uuml;ber das <a href="nemp_medienbib.html">Men&uuml;</a> nicht
 verf&uuml;gbar sind</li>
 
+
   <li>Eingabe der Sortierung im Coverflow</li>
+
 
   <li>Einstellung, ob Gruppen von Dateien ohne
 vern&uuml;nftige Album-Information ("N/A") im Coverflow angezeigt
 werden sollen oder nicht</li>
 
+
 </ul>
 
+
 <br>
+
 
 <span style="font-weight: bold;">Cover &amp; Details</span><br>
 
-Angabe, ob und wo im unteren bereich der medienbibliothek das Cover zur
+
+Angabe, ob und wo im unteren Bereich der Medienbibliothek das Cover zur
 ausgew&auml;hlten Datei mit weiteren Informationen eingeblendet
 werden soll.<br>
 
+
 <br>
+
 
 <span style="font-style: italic;">Tipp: Die Anzeige des
 Covers k&ouml;nnen Sie auch &uuml;ber einen Rechtskllick auf
@@ -95,14 +128,26 @@ die Spalten&uuml;berschriften (s.o.) im hauptfenster
 k&ouml;nnen Sie mit Strg+R rotieren lassen.</span>
 <br>
 
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Sonstiges</span><br>
+
 <ul style="list-style-type: circle;">
+
   <li>ganze Zeile oder nur ein einzelnes Feld in der Medienbibliothek markieren</li>
+
   <li>Hinweise in Medienbibliothek zeigen (diese kleinen gelben
 Fensterchen die aufgehen, wenn man die Maus eine zeitlang nicht bewegt)</li>
+
   <li>Hinweise in der Playliste zeigen</li>
+  <li>Dateien bearbeiten bei Klick erm&ouml;glicht das bearbeiten
+einiger Informationen in der Listenansicht, wenn Sie langsam zweimal
+darauf klicken. Ansonsten geht das immer &uuml;ber die&nbsp;Taste F2.</li>
+
 </ul>
+
 </body>
 </html>
