--- a/help/Fragen.html
+++ b/help/Fragen.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Fragen</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,65 +31,92 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Weitere Fragen</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 <span style="font-weight: bold;">Was will Nemp
 st&auml;ndig im Internet?<br>
+
 
 </span>Wenn Nemp ins Internet geht, dann haben Sie das vorher
 erlaubt. Von alleine macht Nemp da nichts.<span style="font-weight: bold;"><span style="font-weight: bold;"></span></span><span style="font-weight: bold;"><span style="font-weight: bold;"></span></span>
 <ul style="list-style-type: circle;">
 
+
 </ul>
 
+
 <ul style="list-style-type: circle;">
+
 
   <li>Nach Updates suchen. Abschalten unter "Einstellungen
 -&gt; Allgemeine Einstellungen"<br>
 
+
   </li>
 
+
   <li>Scrobbeln. Abschalten per Klick auf das last.fm-Logo <img style="width: 16px; height: 16px;" alt="scrobbel" src="scrobbler.png">, das dann im Hauptfenster erscheint.</li>
+
 
   <li>Cover nachladen f&uuml;r den Player und das Coverflow.
 Abschalten &uuml;ber "Einstellungen -&gt; Player und Cover".</li>
 
+
   <li>Webradio abspielen. Klar, oder?</li>
+
 
   <li>Daten &uuml;ber den Webserver senden. Abschalten
 &uuml;ber das Webserver-Symbol <img style="width: 16px; height: 16px;" alt="web" src="webserver.png">, das dann im Hauptfenster erscheint.</li>
 
+
   <li>Nach Lyrics suchen. Abschalten durch nichtverwenden der
 Funktion</li>
+
 
   <li>Nach erweiterten Tags suchen. Abschalten durch
 nichtverwenden der Funktion</li>
 
+
   <li>Eigene IP-Adresse bestimmen. Abschalten durch "nicht auf
 den Knopf dr&uuml;cken".</li>
 
+
 </ul>
+
 
 <span style="font-weight: bold;">Mein Virenscanner erkennt
 Nemp als Virus, Trojaner oder sonstigen Schweinkram!</span><br>
+
 
 Das ist mit ziemlicher Sicherheit ein Fehlalarm. Auch wenn Sie das
 sicherlich nicht &uuml;berzeugen wird: In Nemp steckt kein
@@ -93,6 +125,7 @@ Trojanisches Pferd oder sonstige Malware. Nemp sendet auch keine Daten
 den eventuellen Bugreports mal abgesehen, aber die k&ouml;nnen Sie
 ja vor dem Senden durchsehen).<br>
 
+
 Die Ursache f&uuml;r den Alarm liegt in den von vielen
 Virenscannern verwendeten Heuristiken. Diese schlagen &ouml;fters
 auf mit Delphi erstellte&nbsp;Programme an, die die so genannten
@@ -100,10 +133,13 @@ Indy-Komponenten verwenden. Diese erleichtern den Zugriff auf Daten im
 Internet - und Nemp nutzt das Internet f&uuml;r einige
 n&uuml;tzliche Dinge (s.o.).<br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">Gibt es eine portable
 Version von Nemp?</span><br>
+
 
 Ja. Nemp ist von sich aus portabel. Beim Starten testet Nemp, in
 welchem Verzeichnis es sich befindet. Liegt es im
@@ -113,11 +149,22 @@ ein
 "installiertes Programm". In allen anderen F&auml;llen werden
 s&auml;mtliche Daten im Programmverzeichnis gespeichert - Nemp ist
 dann
-portabel.<span style="font-weight: bold;"><br>
+portabel.<br>
+<br>
+<span style="font-weight: bold;">Was ist der NempSafemode?</span><br>
+Es gibt noch einige Systeme ohne 3D-Unterst&uuml;tzung. Auf solchen
+funktioniert der Coverflow nicht, wodurch das ganze Programm schon beim
+Start blockieren kann. Der Safemode setzt eine Einstellung um, damit
+Nemp den alten 2D-Coverflow benutzt. Diese Einstellung wird gespeichert
+und kann bei Bedarf unter "Erweiterte Einstellungen" -&gt;
+"Alten Coverflow verwenden" ge&auml;ndert werden.<br>
+<span style="font-weight: bold;">
 
 <br>
 
+
 Gibt es versteckte Eastereggs?</span><br>
+
 
 Ja. Allerdings ist das so speziell, dass es nur f&uuml;r Leute aus
 der
@@ -125,10 +172,13 @@ der
 "Adventsgewinnspiel 2008" dieser Community l&ouml;sen, bei der eine
 defekte mp3-Datei repariert werden musste.<br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">Was macht diese
 KBHook.dll? Das sieht so nach Keylogger aus!</span><br>
+
 
 Diese dll hooked tats&auml;chlich bestimmte Tastendr&uuml;cke -
 n&auml;mlich die&nbsp;Multimediatasten, falls das so
@@ -139,10 +189,13 @@ Deswegen
 meckert da auch kein Virenscanner - die Datei ist v&ouml;llig
 harmlos.<br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">Gibt es versteckte
 Backdoors? </span><br>
+
 
 Ja. Ich habe mir erlaubt, ein Master-Passwort f&uuml;r die
 Beendigung
@@ -150,10 +203,13 @@ des Party-Modus fest einzuprogrammieren. Man findet es im
 Quellcode&nbsp;in der <span style="font-family: monospace;">NempMainUnit.pas</span>
 in der Methode <span style="font-family: monospace;">PM_P_PartyModeClick</span>.<span style="font-weight: bold;"><br>
 
+
 </span><br>
+
 
 <span style="font-weight: bold;">Ich habe Nemp
 heruntergeladen, und habe jetzt eine Rechnung wegen Abokosten bekommen!?</span><br>
+
 
 Es gibt im Internet verschiedene Abofallen-Abzocker, die kostenlose
 Software anbieten, daf&uuml;r aber Geld verlangen. Vor solchen
@@ -162,22 +218,30 @@ Ich habe mit diesen Seiten nichts zu tun. Solche Vorgehensweisen sind
 zwar h&ouml;chst unerfreulich, rechtlich gibt es aber&nbsp;von
 meiner Seite aus keine M&ouml;glichkeit, dagegen vorzugehen. <br>
 
+
 Setzen Sie sich mit einer Verbraucherzentrale in Ihrer Umgebung in
 Verbindung und fragen Sie dort um Rat.<br>
 
+
 <br>
+
 
 <span style="font-weight: bold;">Ich h&auml;tte gerne
 noch eine Funktion eingebaut ...</span><br>
 
+
 Fragen kostet nichts. Einfach eine E-Mail an mail@gausi.de schicken.
 Ich schau dann mal, was sich da machen l&auml;sst.<br>
 
-<br>
 
 <br>
 
+
 <br>
+
+
+<br>
+
 
 </body>
 </html>
