--- a/help/optionen_j_erweiterte.html
+++ b/help/optionen_j_erweiterte.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
+
   
 
 
+  
+  
   
   <title>Erweiterte Einstellungen</title>
   <style title="" media="" type="text/css">
@@ -32,38 +37,51 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">Erweiterte Einstellungen</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
 
+
 <span style="font-weight: bold;">Erweiterte Audio-Einstellungen</span><br>
+
 
 Wenn die Wiedergabe &ouml;fter stockt, liegt das wahrscheinlich an
 einer zu geringen Buffergr&ouml;&szlig;e. Das ist der Teil, der im
@@ -71,17 +89,23 @@ Voraus in den Speicher geladen wird. Bei langsamen Festplatten oder bei
 Liedern auf CDs sollte der Buffer etwas vergr&ouml;&szlig;ert werden,
 bis die Wiedergabe fehlerfrei l&auml;uft.<br>
 
+
 <br>
+
 
 Bei einigen Systemen kann es auch zu einer stark verzerrten Wiedergabe
 kommen. Dies sollte sich in aller Regel durch andere Einstellungen bei
 "Floating-point Channels" und "Mixing" beheben lassen.<br>
 
-<br>
 
 <br>
+
+
+<br>
+
 
 <span style="font-weight: bold;">Ruhemodus</span><br>
+
 
 Wenn der Computer in den Ruhemodus versetzt wird, w&auml;hrend die
 Wiedergabe l&auml;uft, dann setzt die Wiedergabe beim Hochfahren wieder
@@ -89,29 +113,40 @@ ein - noch vor der Anmeldung. Das ist oft nicht erw&uuml;nscht, daher
 kann Nemp beim Wechsel in den Ruhemodus von sich die Wiedergabe
 pausieren.<br>
 
+
 <br>
+
 
 Auf einigen Systemen ist nach dem Aufwachen eine Reinitialisierung der
 Wiedergabe-Engine n&ouml;tig. Es ist auf Ihrem System n&ouml;tig, wenn
 der Player nach einem Aufwachen aus dem Ruhemodus nicht mehr
 fuhnktioniert.<br>
+
 <br>
-<span style="font-weight: bold;">OpenGL</span><br>
+
+<span style="font-weight: bold;">Coverflow</span><br>
+
 Auf Systemen mit &auml;lterer Hardware kann es vorkommen, dass die
-f&uuml;r den neuen Coverflow notwendigen Funktionen nicht
+f&uuml;r den neuen Coverflow notwendigen 3D-Funktionen nicht
 unterst&uuml;tzt werden. In diesem Fall startet Nemp unter
 Umst&auml;nden gar nicht bzw. bleibt beim Starten h&auml;ngen.
 &Uuml;ber den Safemode l&auml;sst sich Nemp trotzdem starten - dieser
-aktiviert dauerhaft den klassischen Coverflow. Sie k&ouml;nnen hier den
+aktiviert dauerhaft den alten 2D-Coverflow. Sie k&ouml;nnen hier den
 Coverflow zur&uuml;ck auf den 3D-Modus setzen.<br>
+
 <span style="font-style: italic;">Hinweis: Wenn Nemp daraufhin nicht
 mehr reagiert oder nicht mehr neu startet, m&uuml;ssen Sie Nemp erneut
-&uuml;ber dei Datei "NempSafemode.exe" starten.</span><br>
+&uuml;ber die Datei "NempSafemode.exe" starten.</span><br>
+<br>
+Auf einigen Systemen wird der Coverflow auch nicht direkt angezeigt -
+dann muss dem Coverflow etwas auf die Spr&uuml;nge geholfen werden. In
+der Regel sollte das aber nicht n&ouml;tig sein.<br>
 
 <br>
-<br>
+
 
 <br>
+
 
 
 </body>
