--- a/help/optionen_6_Player_Cover.html
+++ b/help/optionen_6_Player_Cover.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Player und Cover</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,37 +31,69 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Player und Cover</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
+
 <span style="font-weight: bold;">W&auml;hrend der Wiedergabe</span><br>
+
 <ul style="list-style-type: circle;">
+
   <li>Visualisierung. Steuert ob und wie schnell diese Balken im Playerfenster auf und ab h&uuml;pfen</li>
+
   <li>Titel in Taskleiste scrollen l&auml;sst den Titel in der
 Taskleiste durchlaufen. Die Geschwindigkeit ist relativ zur
 Geschwindigkeit der Visualisierung</li>
-  <li>Titel im Hauptfenster scrollen l&auml;sst den Titel im Hauptfenster durchlaufen. Die Geschwindigkeit ist relativ zur Geschwindigkeit der Visualisierung</li>
+
+  <li>Titel im Hauptfenster scrollen l&auml;sst den Titel im
+Hauptfenster durchlaufen. Die Geschwindigkeit ist relativ zur
+Geschwindigkeit der Visualisierung</li>
+
 </ul>
+
 <span style="font-weight: bold;">Suche Cover in ...</span><br>
+
 Steuert die Suche nach Covern f&uuml;r die Medienbibliothek. Mehr dazu <a href="nemp_coverflow.html">hier</a>. <br>
+
 <br>
-Sie k&ouml;nnen hier das Nachladen von Covern aus dem Internet unterbinden.
+
+Sie k&ouml;nnen hier das Nachladen von Covern aus dem Internet unterbinden.<br>
+<br>
+<span style="font-weight: bold;">Cache leeren</span><br>
+Nemp speichert Informationen &uuml;ber die Cover, die bei LastFM <span style="font-style: italic;">nicht</span>
+gefunden werden k&ouml;nnen. Diese werden erst nach einiger Zeit erneut
+bei LastFM gesucht, und nach einigen weiteren Fehlschl&auml;gen gar
+nicht mehr. Damit wird der Dienst von LastFM und ihre
+Internetverbindung&nbsp;nicht unn&ouml;tig oft mit sinnlosen Anfragen
+(z.B. nach rein privaten Alben oder Samplern) belastet.<br>
+Wenn Sie&nbsp;den Cache l&ouml;schen, dann werden bei Bedarf nicht vorhandene Cover erneut gesucht.
 </body>
 </html>
