--- a/help/webserver.html
+++ b/help/webserver.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Nemp Webserver</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,92 +31,146 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Der Nemp Webserver</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 Der Nemp Webserver bietet die M&ouml;glichkeit, von einem Browser aus &uuml;ber ein Netzwerk auf den Player zuzugreifen.<br>
+
 <br>
+
 <span style="font-weight: bold;">Webserver aktivieren</span><br>
+
 Sie aktivieren den Webserver durch Klick auf den Button "Server
 aktivieren". Im Logfenster sehen Sie dann, wer darauf zugreift und was
 der da so macht.<br>
+
 Ist der Webserver aktiviert, wird im Hauptfenster ein Symbol <img style="width: 16px; height: 16px;" src="webserver.png" alt=""> eingeblendet.<br>
+
 <br>
+
 Sie k&ouml;nnen mit dem Webserver&nbsp;<br>
+
 <ul style="list-style-type: circle;">
+
   <li>Den aktuellen Titel des Players im Browser sehen</li>
+
   <li>Den aktuellen Titel herunterladen (z.B. auf das Handy, mit dem Sie Nemp betrachten)</li>
+
   <li>Den Player steuern</li>
+
   <li>Die Playliste anzeigen lassen und einzelne Titel herunterladen</li>
+
   <li>In der Medienbibliothek suchen und Titel herunterladen</li>
+
   <li>Titel zur Playlist hinzuf&uuml;gen</li>
+
 </ul>
+
 Sie k&ouml;nnen f&uuml;r den Zugriff auf den Webserver einen
 Nutzernamen und Passwort eingeben, um Unbefugten den Zugriff zu
 verweigern. <br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Zugriff aus dem lokalen Netz</span><br>
+
 Geben Sie in ihrem Browser die "Eigene IP (LAN)" ein. Wenn Sie den
 Webserver auf dem Rechner testen wollen, auf dem auch gerade Nemp
 l&auml;uft, verwenden Sie die IP 127.0.0.1. <br>
+
 Die IP-Adresse m&uuml;ssen Sie da eingeben, wo Sie sonst z.B.
 www.gausi.de aufrufen - in der Adresszeile des Browsers. Das Suchfeld
 von Google ist <span style="font-style: italic;">nicht</span> die Adresszeile.<br>
+Wenn Sie nicht den HTTP-Standardport 80 verwenden, m&uuml;ssen Sie den
+Port mit einem Doppelpunkt abgetrennt angeben, also z.B.
+http://127.0.0.1:12345<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Zugriff von au&szlig;erhalb</span><br>
 Wenn Sie Zugriff von au&szlig;erhalb erlauben wollen, m&uuml;ssen Sie
 zun&auml;chst Ihre Internet-IP ermitteln lassen. Das geschieht
 &uuml;ber ein kleines PHP-Script auf meiner Seite www.gausi.de, das
 durch Klick auf den Button "IP-Adresse ermitteln" aufgerufen wird.
 Diese IP&nbsp;m&uuml;ssen Sie Ihren Freunden zusammen mit Nutzernamen
-und Passwort mitteilen.<br>
+und Passwort mitteilen. Auch hier gilt: Wenn Sie einen anderen Port als
+80 eingestellt haben, m&uuml;ssen Sie diesen auch weitergeben.<br>
 <br>
+
 <span style="font-style: italic;">Hinweis: Der Aufruf dieses Scripts
 von Ihrer Adresse wird zwar (wie jeder Seitenaufruf fast &uuml;berall
 im internet) von dem Apache auf dem Server geloggt. Sie wird aber nicht
 weiter verwendet oder gar an Dritte weitergegeben. Nat&uuml;rlich
 k&ouml;nnen Sie daf&uuml;r auch andere Dienste im Netz zur Ermittlung
 Ihrer IP-Adresse verwenden.</span> <br>
+
 <br>
 Zus&auml;tzlich m&uuml;ssen&nbsp;Sie ggf. in der Konfiguration Ihres
-Routers den Port 80 auf Ihre lokale IP-Adresse weiterleiten. Dadurch
+Routers den Port 80 (oder halt den, den Sie in den Einstellungen
+angegeben haben) auf Ihre lokale IP-Adresse weiterleiten. Dadurch
 ist sichergestellt, dass die HTTP-Anfragen aus "dem Internet" bei Nemp
 auch ankommen und nicht am Router h&auml;ngenbleiben.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Warnung!</span><br style="font-weight: bold;">
+
 <span style="font-weight: bold;"><br>
+
 Wenn Sie den Zugriff von au&szlig;erhalb erlauben und kein Passwort
 setzen, dann kann jeder auf Ihre gesamte Musiksammlung zugreifen. Sie
 haben damit praktisch eine eigene "Internetseite" erstellt und bieten
 auf dieser Seite hunderte oder gar tausende m&ouml;glicherweise
 urheberrechtlich gesch&uuml;tzte Lieder zum Download an.<br>
+
 <br style="font-weight: bold;">
+
 </span><span style="font-weight: bold;">Das ist eine sehr schlechte Idee und kann sehr kostenintensive Folgen haben!</span><br style="font-weight: bold;">
+
 <br>
+
 <br>
+
 Sie k&ouml;nnen den Zugriff daher generell&nbsp;auf das lokale Netz
 beschr&auml;nken. HTTP-Anfragen von au&szlig;erhalb werden dann mit
 einer Fehlermeldung beantwortet.<br>
+
 <br>
+
 
 </body>
 </html>
